# hardframe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
files/: frag_testing.glsl  rocky_terrain.mtl  uvcube.mtl  vert_testing.glsl
files/shaders/: frag_testing2.glsl  vert_testing2.glsl
hardframe/include/hardframe/graphics/opgl/: base.hpp
hardframe/include/hardframe/utility/: debug.hpp  general.hpp  loadable.hpp  spatial.hpp  utility.hpp
hardframe/source/graphics/opgl/base/: abstracts.cpp  assets.cpp
hardframe/source/utility/funcs/: casts.cpp  debug.cpp  general.cpp
hardframe/source/utility/types/: loadable.cpp  transform.cpp
project/: main.cpp
